Logo and color change

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -3,19 +3,11 @@
   tags:
     - some
     - tags
-  content: Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-    Eu turpis egestas pretium aenean. Luctus venenatis lectus magna fringilla
-    urna porttitor. Lorem ipsum dolor sit amet. Pellentesque massa placerat
-    duis ultricies. Commodo viverra maecenas accumsan lacus vel.
-
+  content: Our article "Security Allocation in Networked Control Systems under Stealthy Attacks"
+   was accepted to the IEEE Transaction on Control of Network Systems, 2024.
 - date: 03/09/19
   title: "Something great"
   tags:
     - some
     - tags
-  content: Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-    Eu turpis egestas pretium aenean. Luctus venenatis lectus magna fringilla
-    urna porttitor. Lorem ipsum dolor sit amet. Pellentesque massa placerat
-    duis ultricies. Commodo viverra maecenas accumsan lacus vel.
+  content: One paper is accepted in the Conference on Neural Information Processing Systems (NeurIPS).
